--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,20 @@
 header {
-    background-color: red;
-    height: 500px;
-    width: 500px;
+    height: 100%;
+    width: 100%;
+    border: 1px solid red;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 50%;
+    width: 100%;
+    border: 1px solid orange;
+
+}
+
+.player-info {
+    border: 1px solid rgb(0, 255, 89);
 }
