--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,30 @@
 main {
-    background-color: yellow;
-    height: 500px;
-    width: 500px;
+    height: 100%;
+    width: 100%;
+    border: 1px solid yellow;
+
+}
+
+.main-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+    border: 1px solid orange;
+}
+
+.reset-game-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+    border: 1px solid orange;
+}
+
+img {
+    object-fit: cover;
 }
