--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,7 @@ main {
     width: 100%;
     border: 1px solid yellow;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #f4f4f4; /* Fondo suave */
@@ -22,7 +23,7 @@ main {
 
 /* Contenedor del formulario de inicio */
 .start-game-container {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
