--- a/src/css/header.css
+++ b/src/css/header.css
@@ -12,7 +12,7 @@ header {
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:space-around;
     height: 50%;
     width: 100%;
     border: 1px solid orange;
@@ -49,11 +49,30 @@ header {
     text-align: center;
 }
 .player-current-score {
-    border: 1px solid rgb(17, 0, 150);
-    background-color: rgba(17, 0, 150, 0.213);
+    background-color: black;
+    border: 1px solid rgb(0, 255, 225);
+    border-radius: 20px;
+    font-size: 3rem;
+    color: #faf4f4;
+    font-family: Bungee;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 .player-timer {
-    border: 1px solid rgb(150, 0, 0);
-    background-color: rgba(150, 0, 0, 0.213);
+    background-color: black;
+    border: 1px solid rgb(0, 255, 225);
+    border-radius: 20px;
+    font-size: 3rem;
+    color: #faf4f4;
+    font-family: Bungee;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+@media screen and(max-width: 480px){
+    .header-container {
+        flex-direction: column;
+    }
+    
 }
