--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,6 +10,16 @@ main {
     align-items: center;
     background-color: #8c1eff (140, 30, 255)
 }
+/* Estilos base para todos los dispositivos */
+main {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #8c1eff;
+}
 
 /* Contenedor principal del juego */
 .main-container {
@@ -51,7 +61,8 @@ form {
 #player-name {
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #8c1eff (140, 30, 255) border-radius: 5px;
+    border: 1px solid #8c1eff (140, 30, 255);
+    border-radius: 5px;
     width: 100%;
     box-sizing: border-box;
 }
@@ -60,7 +71,8 @@ form {
 button {
     padding: 10px 20px;
     background-color: #f222ff (242, 34, 255);
-    color: #ffd319 (255, 211, 25) border: none;
+    color: #ffd319 (255, 211, 25); 
+    border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
@@ -90,15 +102,14 @@ button:hover {
     border: 1px solid orange;
 }
 
-img {
-    object-fit;
-}
+
 
 /* Estilo para el botón de reset */
 #reset-btn {
     padding: 10px 20px;
     background-color: #dc3545;
-    color: #ffd319 (255, 211, 25) border: none;
+    color: #ffd319 (255, 211, 25); 
+    border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
@@ -109,16 +120,51 @@ img {
     background-color: #c82333;
 }
 
-/* Estilos generales para el pie de página */
-footer {
+
+
+/* Estilos base para todos los dispositivos */
+main {
+    height: 100vh;
+    width: 100vw;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    padding: 10px;
-    background-color: #222;
-    color: #ffd319 (255, 211, 25)
+    align-items: center;
+    background-color: #8c1eff;
 }
 
-footer p {
-    margin: 0 10px;
+.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    width: 90%;
+    max-width: 600px; /* Ajustado para tablettes */
+}
 
+.start-game-container {
+    background-color: #c82333;
+    border: 2px solid #8c1eff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px; /* Ajustado para móviles */
+}
+
+/*estilos para mobil*/
+@media screen and(max-width: 480px){
+}
+
+/* Estilos  para tablettes */
+@media screen and (min-width: 768px) {
+    
+
+    
+     
+}
+
+/* Estilos  para desktops */
+@media screen and (min-width: 1024px) {
+    
 }
