--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -14,3 +14,16 @@ footer {
     width: 100%;
     border: 1px solid orange;
 }
+/* Estilos generales para el pie de página 
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    background-color: #222;
+    color: #ffd319 (255, 211, 25)
+}
+
+footer p {
+    margin: 0 10px;
+
+}*/
