--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,15 +1,5 @@
-/* Estilos generales del contenedor principal */
-main {
-  height: 100%;
-  width: 100vw;
-  border: 1px solid yellow;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #ff901f (255, 144, 31);
-  justify-content: center;
-  align-items: center;
-  background-color: #8c1eff (140, 30, 255);
-}
+
+
 
 /* Contenedor principal del juego */
 .main-container {
@@ -17,11 +7,21 @@ main {
   flex-wrap: wrap;
   align-items: center;
   flex-direction: column;
+  object-fit: cover;
   justify-content: space-between;
-  height: 100%;
-  width: 100%;
+  min-height: auto;
   border: 1px solid #ff901f (255, 144, 31);
 }
+
+.vasos{
+    width:30%;
+}
+.pelota {
+    width: 8%;
+}
+
+    
+
 
 /* Contenedor del formulario de inicio */
 .start-game-container {
@@ -74,13 +74,7 @@ button:hover {
   background-color: #ff2975 (255, 41, 117);
 }
 
-/* Contenedor de la imagen del juego */
-.main-container img {
-  object-fit: cover;
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-}
+
 
 /* Contenedor para el botón de reset */
 .reset-game-container {
@@ -111,21 +105,13 @@ button:hover {
 
 /*estilos para mobil*/
 @media screen and(max-width: 480px) {
-  .container > * {
-    flex-basis: 100%;
-  }
 }
 
 /* Estilos  para tablettes */
 @media screen and (min-width: 768px) {
-  .container > * {
-    flex-basis: 50%;
-  }
 }
 
 /* Estilos  para desktops */
 @media screen and (min-width: 1024px) {
-  .container > * {
-    flex-basis: 33.33%;
-  }
+  
 }
