--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,37 +8,26 @@ main {
     border: 1px solid #ff901f (255, 144, 31);
     justify-content: center;
     align-items: center;
-    background-color: #8c1eff (140, 30, 255)
+    background-color: #8c1eff (140, 30, 255);
+
 }
 
 /* Contenedor principal del juego */
 .main-container {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
-    justify-content: space-between;
     height: 100%;
     width: 100%;
-    border: 1px solid #ff901f (255, 144, 31);
+    border: 1px solid #ff901f;
+    z-index: 1;
+    /* Asegura que el main-container quede detrás del modal */
+    position: relative;
+    /* Importante para que el z-index funcione */
 }
 
-/* Contenedor del formulario de inicio */
-.start-game-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    /* background-color: #ffd319 (255, 211, 25); */
-    background-color: #c82333;
 
-    border: 2px solid #8c1eff (140, 30, 255);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    max-width: 400px;
-}
 
 /* Estilo del formulario */
 form {
@@ -51,7 +40,8 @@ form {
 #player-name {
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #8c1eff (140, 30, 255) border-radius: 5px;
+    border: 1px solid #8c1eff (140, 30, 255);
+    border-radius: 5px;
     width: 100%;
     box-sizing: border-box;
 }
@@ -60,7 +50,8 @@ form {
 button {
     padding: 10px 20px;
     background-color: #f222ff (242, 34, 255);
-    color: #ffd319 (255, 211, 25) border: none;
+    color: #ffd319 (255, 211, 25);
+    border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
@@ -98,11 +89,9 @@ img {
 #reset-btn {
     padding: 10px 20px;
     background-color: #dc3545;
-    color: #ffd319 (255, 211, 25) border: none;
-    border-radius: 5px;
+    color: #ffd319 (255, 211, 25) border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    transition: background-color 0.3s;
 }
 
 #reset-btn:hover {
