--- a/src/css/header.css
+++ b/src/css/header.css
@@ -24,7 +24,7 @@ header {
 .player-info {
     border: 1px solid rgb(0, 150, 0);
     border: 1px solid rgb(0, 255, 225);
-    font-size: 3rem;
+    font-size: 2rem;
     color: #faf4f4;
     font-family: Bungee;
     padding: 10px;
@@ -77,7 +77,7 @@ header {
 .player-name,
 .player-total-score,
 .player-timer {
-    font-size: 3rem;/*medidas letra para que se vea bien*/
+    font-size: medium; /medidas letra para que se vea bien*/
     transition: all 300ms ease-in-out;/*tiempo transicion*/
 }
 
