--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,10 +1,38 @@
-footer {
-    height: 100%;
-    width: 100%;
-    border: 1px solid green;
-
+.coders {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  border: 1px solid green;
+}
+.footer-container p {
+  display: flex;
+  font-size: small;
 }
 
+@media screen and(max-width: 480px) {
+    coders {
+  font-size: 1rem;
+  transition: all 300ms ease-in-out; /* Ajusta el tiempo de transición */
+}
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+ coders {  
+  font-size: 2rem;
+  transition: all 300ms ease-in-out; /* Ajusta el tiempo de transición */
+}
+}
+@media screen and (min-width: 1024px) {
+    coders {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: no-wrap;
+        font-size: 3rem;
+        transition: all 300ms ease-in-out; /* Ajusta el tiempo de transición */
+        
+    }
+
+
+/* 
 .footer-container {
     display: flex;
     align-items: center;
@@ -13,7 +41,7 @@ footer {
     height: 100%;
     width: 100%;
     border: 1px solid orange;
-}
+} */
 /* Estilos generales para el pie de página 
 footer {
     display: flex;
