--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,20 +7,21 @@ header {
 }
 
 .header-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  gap: 10px;
+  display: flex;
   align-items: center;
-
+  flex-direction: row;
+  justify-content:space-around;
   height: 50%;
   width: 100%;
   border: 1px solid orange;
+  
 }
 
 .player-info {
   border: 1px solid rgb(0, 150, 0);
   border: 1px solid rgb(0, 255, 225);
-
+  display: flex;
+  flex-direction: column;
   color: #faf4f4;
   font-family: Bungee;
   padding: 10px;
@@ -68,13 +69,7 @@ header {
   text-align: center;
 }
 
-/*quiero que las transiciones no sean tan duras*/
-.player-info,
-.player-name,
-.player-total-score,
-.player-timer {
-  transition: all 300ms ease-in-out; /*tiempo transicion*/
-}
+
 
 @media screen and(max-width: 480px) {
   .player-info,
@@ -84,10 +79,9 @@ header {
     font-size: 1rem;
   }
   .header-container {
-    flex-direction: row;
+   
     justify-content: space-between;
-    height: auto;
-    width: 100%;
+    
     font-size: 1rem;
     transition: all 300ms ease-in-out; /* Ajusta el tiempo de transición */
   }
@@ -110,7 +104,7 @@ header {
     font-size: 2rem;
   }
   .header-container {
-    flex-direction: row;
+   
     justify-content: space-between;
     height: auto;
     width: 100%;
@@ -130,7 +124,7 @@ header {
     font-size: 3rem;
   }
   .header-container {
-    flex-direction: row;
+    
     justify-content: space-between;
     height: auto;
     width: 100%;
