--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -25,4 +25,6 @@
     /* Centrado perfecto */
     z-index: 10;
     /* Asegura que se sobreponga */
+    visibility: hidden;
+    /* para que no muetre el contenedor al inicio que me molesta para ver que esta pasando, !!ACUERDATE DE SACARLO ALBA!! */
 }
