--- a/src/css/main.css
+++ b/src/css/main.css
@@ -66,8 +66,8 @@ form {
 
 /* Estilo para el botón de iniciar juego */
 button {
-  background-color: rgb(255, 0, 255);
-  color: black;
+  background-color:black;
+  color:rgb(255, 0, 255) ;
   border-radius: 20px;
   border-top: 5px;
   border-color: rgb(101, 215, 231);
@@ -77,6 +77,7 @@ button {
 
 button:hover {
   background-color: rgb(255, 0, 255);
+  color:black;
 }
 
 /* Contenedor para el botón de reset */
