--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Bungee&display=swap");
 
+* {
+  font-family: Bungee;
+}
+
 .main-container {
   display: flex;
   flex-wrap: wrap;
@@ -14,7 +18,7 @@
 
 .imagenes-cont {
   justify-content: space-around;
-  background-color: #161648;
+  background-color: black;
   display: flex;
   flex-direction: row;
 
@@ -32,7 +36,7 @@
   grid-column: 1;
   height: 100%;
   width: 100%;
-  background-color: #c82333;
+  background-color: black;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -52,11 +56,14 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 5px;
-  padding: 20px;
+  margin: 1rem 1rem 1rem 1rem;
+  padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px;
-  width: 80%;
+  width: 50%;
+  height: 40%;
   max-width: 400px;
+  background: linear-gradient(#161648, #3438c1);
+  color: #ff00ff;
 }
 
 form {
@@ -98,6 +105,7 @@ button:hover {
   width: 100%;
   color: white;
   padding-top: 50px;
+  background-color: #000;
 }
 
 .reset-btn {
