--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Bungee&display=swap");
+
 header {
   height: auto;
   width: auto;
@@ -40,6 +41,7 @@ header {
   margin-bottom: 20px;
   text-align: center;
 }
+
 .player-current-score {
   background-color: black;
 
@@ -61,17 +63,19 @@ header {
 }
 
 @media screen and(max-width: 480px) {
+
   .player-info,
   .player-name,
   .player-total-score,
   .player-timer {
     font-size: 1rem;
   }
+
   .header-container {
     justify-content: space-between;
 
     font-size: 1rem;
-    transition: all 300ms ease-in-out; /* Ajusta el tiempo de transición */
+    transition: all 300ms ease-in-out;
   }
 
   .button-container {
@@ -84,37 +88,40 @@ header {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-  /* Estilos específicos para tablets */
+
   .player-info,
   .player-name,
   .player-total-score,
   .player-timer {
     font-size: 2rem;
   }
+
   .header-container {
     justify-content: space-between;
     height: auto;
     width: 100%;
-    transition: all 300ms ease-in-out; /* Ajusta el tiempo de transición */
+    transition: all 300ms ease-in-out;
   }
 
   .button-container {
     gap: 15px;
   }
 }
+
 @media screen and (min-width: 1024px) {
-  /* Estilos específicos para desktops */
+
   .player-info,
   .player-name,
   .player-total-score,
   .player-timer {
     font-size: 3rem;
   }
+
   .header-container {
     justify-content: space-between;
     height: auto;
     width: 100%;
-    transition: all 300ms ease-in-out; /* Ajusta el tiempo de transición */
+    transition: all 300ms ease-in-out;
   }
 
   .button-container {
