--- a/src/css/main.css
+++ b/src/css/main.css
@@ -195,24 +195,17 @@ button:hover {
   font-weight: bold;
 }
 
-
-. @media screen and(max-width: 480px) {
-    {
-    font-size: 1rem;
-    transition: all 300ms ease-in-out;
-  }
+@media screen and (max-width: 480px) {
+  font-size: 1rem;
+  transition: all 300ms ease-in-out;
 }
 
 @media screen and (min-width: 768px) {
-    {
-    font-size: 2rem;
-    transition: all 300ms ease-in-out;
-  }
+  font-size: 2rem;
+  transition: all 300ms ease-in-out;
 }
 
 @media screen and (min-width: 1024px) {
-    {
-    font-size: 3rem;
-    transition: all 300ms ease-in-out;
-  }
+  font-size: 3rem;
+  transition: all 300ms ease-in-out;
 }
