--- a/src/css/main.css
+++ b/src/css/main.css
@@ -195,7 +195,7 @@ button:hover {
   font-weight: bold;
 }
 
-@media screen and (max-width: 480px) {
+/* @media screen and (max-width: 480px) {
   font-size: 1rem;
   transition: all 300ms ease-in-out;
 }
@@ -208,4 +208,4 @@ button:hover {
 @media screen and (min-width: 1024px) {
   font-size: 3rem;
   transition: all 300ms ease-in-out;
-}
+} */
